Fixed table to div elements

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body> 
     <button id="btn">Generate Property</button>
     
-      <table id="ourTable">
-      </table>
+      <div id="ourTable">
+      </div>
     
   </body>
 </html>
